<resources>
    <string name="app_name">Cadastro</string>
    <string name="email">email</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="nome">Nome</string>
    <string name="Cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bem_vindo">Bem vindo!</string>
</resources>