<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/azul_escuro">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-77dp"
        tools:layout_editor_absoluteY="180dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Cadastro_Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Cadastro"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:hint="@string/nome"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Cadastro_Nome">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Cadastro_endereco">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Cadastro_estado">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Cadastro_cidade">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Cadastro_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Cadastro_telefone">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_escuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="67dp">

                <Button
                    android:id="@+id/button_cadastrar"
                    android:layout_width="189dp"
                    android:layout_height="55dp"
                    android:text="@string/cadastrar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>